// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: invalid settings 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <WrongBindingCountAlert
    alm="gitlab"
    canAdmin={false}
  />
</Fragment>
`;

exports[`should render correctly: invalid settings, admin user 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <WrongBindingCountAlert
    alm="gitlab"
    canAdmin={true}
  />
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <i
    className="spinner"
  />
</Fragment>
`;

exports[`should render correctly: pat form 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <PersonalAccessTokenForm
    almSetting={
      Object {
        "alm": "gitlab",
        "key": "key",
      }
    }
    onPersonalAccessTokenCreate={[MockFunction]}
    submitting={false}
    validationFailed={false}
  />
</Fragment>
`;

exports[`should render correctly: project selection form 1`] = `
<Fragment>
  <CreateProjectPageHeader
    title={
      <span
        className="text-middle"
      >
        <img
          alt=""
          className="spacer-right"
          height="24"
          src="/images/alm/gitlab.svg"
        />
        onboarding.create_project.gitlab.title
      </span>
    }
  />
  <GitlabProjectSelectionForm
    loadingMore={false}
    onImport={[MockFunction]}
    onLoadMore={[MockFunction]}
    onSearch={[MockFunction]}
    projectsPaging={
      Object {
        "pageIndex": 1,
        "pageSize": 30,
        "total": 0,
      }
    }
    searchQuery=""
    searching={false}
  />
</Fragment>
`;
